src/objects/IT_Additional_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>IT_AC_User__c</fullName>
        <label>AC User</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Calculation_Type__c</fullName>
        <inlineHelpText>If &quot;Quantity&quot; is selected, the amount will be calculated based on the quantity in the contract line items</inlineHelpText>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Client_Code__c</fullName>
        <label>Client Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Code__c</fullName>
        <label>Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IT_Service__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>CONSIDERATION PRODUCTION PERSONALIZED</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>CONSIDERATION CUSTOM PACKAGING (FOR COST CENTERS)</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>CONSIDERATION CUSTOM PACKAGING (FOR BOOKLET)</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>CONSIDERATION CUSTOM PACKAGING (FOR QUANTITY &apos;)</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>URGENT CONSIDERATION PRODUCTION</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>STORAGE FEE</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>FEE FOR DELIVERY replay</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>CONSIDERATION FOR PORT GOOD / VOUCHER</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>CONSIDERATION FOR DRIVING LOCAL AFFILIATES</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>CONSIDERATION FOR EDUCATION PRACTICE</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>CONSIDERATION FOR PRACTICE EDUCATION RETURNS</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>CONSIDERATION FOR REISSUE</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FEE FOR DELIVERY</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>CONSIDERATION FOR PRODUCTION CARDS</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>CONSIDERATION FOR MANAGEMENT ORDER</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Financial_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Center</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Additional_Expenses</relationshipLabel>
        <relationshipName>Additional_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Progressive__c</fullName>
        <label>Progressive</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Service__c</fullName>
        <inlineHelpText>The service does correspond to the financial center service</inlineHelpText>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IT_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Validity_End_Date__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Validity_Start_Date__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <label>Additional Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA{00000}</displayFormat>
        <label>Additional Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VRIT01_Calculation_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &quot;IT&quot;),
	 ISPICKVAL(IT_Calculation_Type__c, &apos;0&apos;),
OR(			
IT_Amount__c &lt;= 0,
 ISNULL(IT_Amount__c) )
)</errorConditionFormula>
        <errorMessage>If calculation type is fixed, the amount cannot be zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRIT02_Service</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &quot;IT&quot;),
TEXT(IT_Service__c) != TEXT( IT_Financial_Center__r.IT_Service__c)
				)</errorConditionFormula>
        <errorDisplayField>IT_AC_User__c</errorDisplayField>
        <errorMessage>The service does not correspond to the financial center service</errorMessage>
    </validationRules>
</CustomObject>